[package]
name = "psp-font"
version = "0.1.0"
authors = ["mov-rax <csharper.work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#psp = "0.1.2"
bitflags = "1.2.1"

[dependencies.arrayvec]
version = "0.5.2"
default-features = false

[dependencies.byteorder]
version = "1.3.4"
default-features = false